[package]
name = "gw2orrient"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
itertools = "0.13.0"
anyhow = "1.0.86"

orrient_api = { path = "orrient_api" }
orrient_core = { path = "orrient_core" }
orrient_input = { path = "orrient_input" }
orrient_link = { path = "orrient_link" }
orrient_pathing = { path = "orrient_pathing" }
orrient_ui = { path = "orrient_ui" }

### Mumblelink Connectivity ####################################################
mumblelink_reader = "0.3.5"
bincode = "1.3.3"
crossbeam-channel = "0.5.13"

# https://github.com/bevyengine/bevy/
bevy = { version = "0.14.1", features = ["wayland", "file_watcher"] }

[workspace]
resolver = "2"
members = [
  "orrient_api",
  "orrient_core",
  "orrient_input",
  "orrient_link",
  "orrient_pathing",
  "orrient_ui",
]

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
