[package]
name = "gw2orrient"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
orrient_api.workspace = true
orrient_core.workspace = true
orrient_input.workspace = true
orrient_link.workspace = true
orrient_pathing.workspace = true
orrient_ui.workspace = true

anyhow.workspace = true

### Mumblelink Connectivity ####################################################
bincode = "1.3.3"
crossbeam-channel = "0.5.13"

[workspace]
resolver = "2"
members = [
  "crates/orrient_api",
  "crates/orrient_core",
  "crates/orrient_input",
  "crates/orrient_link",
  "crates/orrient_pathing",
  "crates/orrient_ui",
]

[workspace.dependencies]
orrient_api = { path = "crates/orrient_api" }
orrient_core = { path = "crates/orrient_core" }
orrient_input = { path = "crates/orrient_input" }
orrient_link = { path = "crates/orrient_link" }
orrient_pathing = { path = "crates/orrient_pathing" }
orrient_ui = { path = "crates/orrient_ui" }

# https://github.com/bevyengine/bevy/
bevy = { version = "0.14.1", features = ["wayland", "file_watcher"] }

serde = "1.0.210"
anyhow = "1.0.86"
thiserror = "1.0.63"
smol_str = { version = "0.2.2", features = ["serde"] }
directories = "5.0.1"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
