[package]
name = "marker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
quick-xml = { version = "0.32.0", features = ["serialize"] }
petgraph = "0.6.5"
log = "0.4.22"
env_logger = "0.11.3"
byteorder = "1.5.0"

[dev-dependencies]
dirs = "5.0.1"
