[package]
name = "orrient_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# https://github.com/tafia/quick-xml
quick-xml = { version = "0.32.0", features = ["overlapped-lists"] }

petgraph = "0.6.5"
log = "0.4.22"
env_logger = "0.11.3"
typed-path = "0.9.0"
zip = "2.1.3"

[dev-dependencies]
dirs = "5.0.1"
