[package]
name = "orrient_api"
version.workspace = true
edition.workspace = true

[dependencies]
orrient_pathing.workspace = true
bevy.workspace = true
serde.workspace = true
thiserror.workspace = true

gw2lib = "3.0.0"
bevy_async_task = "0.2.0"
serde_json = "1.0.128"
bevy_mod_reqwest = "0.16.0"
directories.workspace = true
