[package]
name = "orrient_link"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"

bevy_app = "0.14.1"
bevy_ecs = { version = "0.14.1", features = ["serialize"] }
bevy_input = { version = "0.14.1", features = ["serialize"] }

# serde feature Required for bevy_input serialization
smol_str = { version = "0.2.2", features = ["serde"] }
bincode = "1.3.3"
byteorder = "1.5.0"
crossbeam-channel = "0.5.13"
mumblelink_reader = "0.3.5"
rdev = "0.5.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.127"
orrient_input = { path = "../orrient_input" }

[lib]
name = "orrient_link"

[[bin]]
name = "orrient_link"
