[package]
name = "orrient_link"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
orrient_input.workspace = true

env_logger = "0.11.3"
log = "0.4.22"

# serde feature Required for bevy_input serialization
smol_str.workspace = true
bincode = "1.3.3"
byteorder = "1.5.0"
crossbeam-channel = "0.5.13"
mumblelink_reader = "0.3.5"
rdev = "0.5.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.127"

[lib]
name = "orrient_link"

[[bin]]
name = "orrient_link"
