[package]
name = "orrient_link"
version.workspace = true
edition.workspace = true

[lib]
name = "orrient_link"

[dependencies]
orrient_core.workspace = true
orrient_input.workspace = true

bevy.workspace = true

bincode.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true

byteorder = "1.5.0"
serde_json = "1.0.127"
mumblelink_reader = "0.3.5"
