[package]
name = "orrient_pathing"
version.workspace = true
edition.workspace = true

[dependencies]
orrient_core.workspace = true

bevy.workspace = true
# https://github.com/kulkalkul/bevy_mod_billboard
bevy_mod_billboard = "0.7.0"

anyhow.workspace = true
serde.workspace = true

itertools = "0.13.0"
dirs = "5.0.1"
quick-xml = { version = "0.32.0", features = ["overlapped-lists"] }
typed-path = "0.9.0"
zip = "2.1.3"
directories.workspace = true
ron.workspace = true
slab_tree = "0.3.2"

[dev-dependencies]
lazy_static = "1.5.0"
tempfile = "3.12.0"
