[package]
name = "orrient_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
orrient_api = { path = "../orrient_api" }
orrient_core = { path = "../orrient_core" }
orrient_pathing = { path = "../orrient_pathing" }

bevy = "0.14.1"

# https://github.com/UmbraLuminosa/sickle_ui
sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui", rev = "b39bffa35b8c6ef2f081ef0b7f577825f5fcd87a" }
# https://github.com/kulkalkul/bevy_mod_billboard
bevy_mod_billboard = "0.7.0"

### Console ####################################################################
# https://github.com/RichoDemus/bevy-console/
bevy_console = { git = "https://github.com/RichoDemus/bevy-console/" }
# https://github.com/clap-rs/clap
clap = { version = "4.5.10", features = ["derive"] }
