[package]
name = "orrient_ui"
version.workspace = true
edition.workspace = true

[dependencies]
orrient_api.workspace = true
orrient_core.workspace = true
orrient_pathing.workspace = true

bevy.workspace = true

# https://github.com/UmbraLuminosa/sickle_ui
sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui", rev = "b39bffa35b8c6ef2f081ef0b7f577825f5fcd87a" }
# https://github.com/kulkalkul/bevy_mod_billboard
bevy_mod_billboard = "0.7.0"

### Console ####################################################################
# https://github.com/RichoDemus/bevy-console/
bevy_console = { git = "https://github.com/RichoDemus/bevy-console/" }
# https://github.com/clap-rs/clap
clap = { version = "4.5.10", features = ["derive"] }
itertools = "0.13.0"
