[package]
name = "orrient_ui"
version.workspace = true
edition.workspace = true

[dependencies]
orrient_api.workspace = true
orrient_core.workspace = true
orrient_pathing.workspace = true
orrient_input.workspace = true
orrient_link.workspace = true

bevy.workspace = true

# https://github.com/UmbraLuminosa/sickle_ui
sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui", rev = "83ed461d54a149840afc6a46d369a219c9429ca1" }
# https://github.com/kulkalkul/bevy_mod_billboard
bevy_mod_billboard = "0.7.0"

### Console ####################################################################
# https://github.com/RichoDemus/bevy-console/
bevy_console = { git = "https://github.com/RichoDemus/bevy-console/" }
# https://github.com/clap-rs/clap
clap = { version = "4.5.10", features = ["derive"] }
itertools = "0.13.0"
cyborgtime = "2.1.1"
